--- a/init.toml
+++ b/init.toml
@@ -12,7 +12,10 @@
 # if you want to use more colorscheme, please load the colorscheme
 # layer
 vim_help_language = "cn"
-colorscheme = "SpaceVim"
+# colorscheme = "molokai"
+# colorscheme = "onedark"
+# colorscheme = "gruvbox"
+colorscheme = "hybrid" # nice, favourite
 colorscheme_bg = "dark"
 # Disable guicolors in basic mode, many terminal do not support 24bit
 # true colors
@@ -31,6 +34,8 @@ name = 'autocomplete'
 auto-completion-return-key-behavior = "complete"
 auto-completion-tab-key-behavior = "smart"
 
+[[layers]]
+name = 'colorscheme'
 
 [[layers]]
 name = 'shell'
@@ -75,8 +80,8 @@ name = "lang#dockerfile"
 [[layers]]
 name = "lang#markdown"
 
-[[layers]]
-name = "cscope"
+# [[layers]]
+# name = "cscope"
 
 # [[layers]]
 # name = "VersionControl"
@@ -86,3 +91,6 @@ name = "cscope"
 
 [[layers]]
 name = "chinese"
+
+[[layers]]
+name = "toml"
